# supabase_updater

./: .env  README.md  pyproject.toml  requirements.txt  supabase_updater.lnk  test_supabase_updater.py
src/supabase_updater/: __init__.py  tool.py
