[project]
name = "supabase_updater"
version = "0.1.0"
description = "Ferramenta CrewAI para atualizar dados no Supabase"
authors = [{name = "Seu Nome", email = "seu@email.com"}]
dependencies = [
    "crewai",
    "crewai-tools",
    "requests",
    "python-dotenv",
    "pydantic"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
